--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.540.0",
+    "moment": "^2.30.1",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "nookies": "^2.5.2",
