--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "swr": "^2.3.6",
     "tailwind-clamp": "^4.1.0",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
