--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "**/Thumbs.db": true,
     "**/node_modules": true
   },
+  "peacock.color": "#FFC247",
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#ffd37a",
     "activityBar.background": "#ffd37a",
@@ -26,5 +27,5 @@
     "titleBar.inactiveBackground": "#ffc24799",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#FFC247"
+  "peacock.remoteColor": "#FFC247"
 }
